<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>heigit.ors</groupId>
    <artifactId>openrouteservice</artifactId>
    <version>4.4.0</version>
    <packaging>war</packaging>
    <name>OpenRouteService</name>
    <url>openrouteservice.org</url>
    <inceptionYear>2017</inceptionYear>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/GIScience/openrouteservice/issues</url>
    </issueManagement>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.timestamp>${maven.build.timestamp}</project.timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
        <!-- The following line might show up as an error in IntelliJ IDE... it is not an error but a bug in IntelliJ so don't worry! -->
        <build.version>${git.commit.time}.${git.commit.id.abbrev}</build.version>
    </properties>
     <scm>
  	<url>git@gitlab.com:giscience/openrouteservice/ORS_backend.git</url>
   	<connection>scm:git:git@gitlab.com:giscience/openrouteservice/ORS_backend.git</connection>
   	<developerConnection>scm:git:git@gitlab.com:giscience/openrouteservice/ORS_backend.git</developerConnection>
     </scm>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
       <resource>
         <directory>src/main/resources</directory>
         <includes>
           <include>resources/locales/*.resources</include>
           <include>resources/version.properties</include>
           <include>resources/services/locations/categories.txt</include>
           <include>resources/services/routing/speed_limits/*.*</include>
           <include>META-INF/services/*.*</include>
         </includes>
         <filtering>true</filtering>
       </resource>
     </resources>

    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>1.8</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>run</goal>
                    </goals>
                    <configuration>
                        <tasks>
                            <echo>Creating version file</echo>
                            <copy file="${basedir}/target/${project.artifactId}-${project.version}/WEB-INF/classes/resources/version.properties" tofile="${basedir}/target/version.properties" />
                        </tasks>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>pl.project13.maven</groupId>
            <artifactId>git-commit-id-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
                <execution>
                    <phase>validate</phase>
                    <goals>
                        <goal>revision</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <dateFormat>yyyMMdd-HHmmss</dateFormat>
                <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
                <generateGitPropertiesFile>false</generateGitPropertiesFile>
                <injectAllReactorProjects>true</injectAllReactorProjects>
            </configuration>
        </plugin>
     <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
           <webXml>WebContent/WEB-INF/web.xml</webXml>
          <failOnMissingWebXml>false</failOnMissingWebXml>
          <!-- <attachClasses>true</attachClasses>
          <classesClassifier>classes</classesClassifier> -->
          <!-- <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>ors.heigit.routing.GraphBuilder</mainClass>
            </manifest>
          </archive>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          		 <path>/${project.build.finalName}</path>
          		 <port>8082</port>
                 <addContextWarDependencies>true</addContextWarDependencies>
                 <addWarDependenciesInClassloader>true</addWarDependenciesInClassloader>
                 <warSourceDirectory>${project.build.directory}/${project.build.finalName}/</warSourceDirectory>
                 <uriEncoding>utf-8</uriEncoding>
            </configuration>
      </plugin>
       <plugin><!-- clean up from war:inplace  -->
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.6</version>
      </plugin>
      </plugins>
  </build>

  <repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>opengeo</id>
			<name>OpenGeo Maven Repository</name>
			<url>http://repo.opengeo.org</url>
		</repository>
		<repository>
      		<id>bintray-nitram509-jbrotli</id>
      		<name>bintray</name>
      		<url>http://dl.bintray.com/nitram509/jbrotli</url>
    	</repository>
    	<repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
    </repositories>

<dependencies>
	<dependency>
		<groupId>com.vividsolutions</groupId>
		<artifactId>jts</artifactId>
		<version>1.13</version>
	</dependency>

	<dependency>
    	<groupId>org.geotools</groupId>
    	<artifactId>gt-main</artifactId>
    	<version>16.1</version>
	</dependency>

	<dependency>
    	<groupId>org.geotools</groupId>
    	<artifactId>gt-api</artifactId>
    	<version>16.1</version>
	</dependency>

	<dependency>
    	<groupId>org.geotools</groupId>
    	<artifactId>gt-epsg-hsql</artifactId>
    	<version>16.1</version>
	</dependency>

    <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-geojson</artifactId>
        <version>18.2</version>
    </dependency>

	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.14</version>
	</dependency>

	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
   		<version>3.1.0</version>
   		<scope>provided</scope>
	</dependency>

	<dependency>
		<groupId>org.jgrapht</groupId>
		<artifactId>jgrapht-core</artifactId>
		<version>0.9.1</version>
	</dependency>

	<dependency>
		<groupId>commons-net</groupId>
		<artifactId>commons-net</artifactId>
		<version>3.3</version>
	</dependency>

	<dependency>
    	<groupId>net.sf.trove4j</groupId>
    	<artifactId>trove4j</artifactId>
    	<version>3.0.3</version>
	</dependency>

 	<dependency>
	 	<groupId>com.github.GIScience.graphhopper</groupId>
		<artifactId>graphhopper-core</artifactId>
	   	<version>v0.9.11</version>
	</dependency>

        <dependency>
		<groupId>com.github.GIScience.graphhopper</groupId>
		<artifactId>graphhopper-reader-osm</artifactId>
		<version>v0.9.11</version>
        </dependency>


    <!-- remove the comment to enable debugging
         <dependency>
             <groupId>com.graphhopper</groupId>
            <artifactId>graphhopper-core</artifactId>
               <version>0.10-SNAPSHOT</version>
        </dependency>

          <dependency>
             <groupId>com.graphhopper</groupId>
           <artifactId>graphhopper-reader-osm</artifactId>
               <version>0.10-SNAPSHOT</version>
        </dependency>
     -->
	<dependency>
    	<groupId>com.typesafe</groupId>
	    <artifactId>config</artifactId>
	    <version>1.3.1</version>
	</dependency>

	<dependency>
    	<groupId>com.zaxxer</groupId>
    	<artifactId>HikariCP</artifactId>
    	<version>2.6.1</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
	<dependency>
    	<groupId>org.postgresql</groupId>
    	<artifactId>postgresql</artifactId>
    	<version>9.4.1212</version>
	</dependency>

   	<dependency>
      	<groupId>org.meteogroup.jbrotli</groupId>
      	<artifactId>jbrotli</artifactId>
      	<version>0.5.0</version>
   	</dependency>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.4</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
<!-- <dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<version>6.0.5</version>
	</dependency>
 -->
</dependencies>

    <!-- mvn deploy -DperformRelease=true -->
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
